--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="row">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
     </div>
     <div class="row">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
     </div>
     <div class="row">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
     </div>
     <div class="row">
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-    </div> 
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+      <div class="card color-hidden" onclick="onCardClicked(event)"></div>
+    </div>
     <script src="/main.js"></script>
   </body>
 </html>
